<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>br.com.archflow</groupId>
        <artifactId>archflow</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>archflow-langchain4j</artifactId>
    <packaging>pom</packaging>

    <modules>
        <module>archflow-langchain4j-core</module>
        <module>archflow-langchain4j-openai</module>
        <module>archflow-langchain4j-anthropic</module>
        <module>archflow-langchain4j-provider-hub</module>
        <module>archflow-langchain4j-memory-redis</module>
        <module>archflow-langchain4j-memory-jdbc</module>
        <module>archflow-langchain4j-chain-rag</module>
        <module>archflow-langchain4j-embedding-openai</module>
        <module>archflow-langchain4j-embedding-local</module>
        <module>archflow-langchain4j-vectorstore-redis</module>
        <module>archflow-langchain4j-vectorstore-pgvector</module>
        <module>archflow-langchain4j-vectorstore-pinecone</module>
        <module>archflow-langchain4j-mcp</module>
        <module>archflow-langchain4j-skills</module>
        <module>archflow-langchain4j-openrouter</module>
        <module>archflow-langchain4j-realtime</module>
    </modules>

    <properties>
        <langchain4j.version>1.12.2</langchain4j.version>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <!-- Project Encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- LangChain4j BOM -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>

        <!-- Plugin Management -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>
                <!-- JaCoCo inherited from root pluginManagement -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.13</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>